# clickbait-image-detector

./: LICENSE  README.md  backup.sqlite  keywords.txt  mypy.ini  output.sqlite  pyproject.toml  requirements.txt  template.env
app/classifier/: database.py  dataset.py  main.py
app/classify/: main.py
app/database/: database.py  merge_tool.py
app/models/: dataset.py  query_data.py  video.py  youtube_api_result.py
app/query/: api.py  keywords.py  main.py
app/scrape/: main.py  thumbnail.py
app/scraper/: main.py  thumbnail.py
app/sorter/: main.py
app/train/: main.py  newer_lower.py
yt_scraper/: database.py  keywords.py  main.py  thumbnail.py  trash.json  yt_api.py
yt_scraper/models/: query_data.py  youtube_api_result.py
