[tool.poetry]
name = "yt-scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "yt_scraper"}]

[tool.poetry.scripts]
start = "yt_scraper.main:main"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.4"
google-api-python-client-stubs = "^1.24.0"
mypy = "^1.9.0"
requests = "^2.31.0"
types-requests = "^2.31.0.20240311"
google-api-python-client = "^2.122.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
